# emveepee

./: ChangeLog  Makefile.am  README  autogen.sh  configure.in
Emveepee.Addin/: AssemblyInfo.cs  Emveepee.Addin.addin.xml.in  Emveepee.addins.in  Makefile.am  ProfilerCommands.cs  ProfilerExecutionHandler.cs  ProfilerExecutionModeSet.cs  ProfilerLogDisplayBinding.cs  ProfilerNodeBuilderExtension.cs  ProfilerViewContent.cs
Emveepee.Decoding/: AssemblyInfo.cs  Block.cs  DirectivesBlock.cs  EndBlock.cs  EventsBlock.cs  FilteredCallStack.cs  HeapDataBlock.cs  HeapSummaryBlock.cs  IntroBlock.cs  LoadedBlock.cs  LogFileStream.cs  Makefile.am  MappingBlock.cs  ProfileData.cs  StackItem.cs  StackNode.cs  StatBlock.cs  UnloadedBlock.cs
Emveepee.Widgets/: AllocationsView.cs  DisplayOptions.cs  History.cs  Makefile.am  Node.cs  ProfileConfiguration.cs  ProfileOptionsEditor.cs  ProfileSetupDialog.cs  ProfileStore.cs  ProfileView.cs  ProfilerProcess.cs  ProfilerSocket.cs  StackView.cs  StartPage.cs
emveepee/: Main.cs  MainWindow.cs  Makefile.am
